--- a/sca-frontend/src/app/mod1-assets/mining-complex-form/mining-complex-form.component.html
+++ b/sca-frontend/src/app/mod1-assets/mining-complex-form/mining-complex-form.component.html
@@ -243,7 +243,7 @@
   >
 
   <app-structure-form
-    [structureEdit]="actualStructure"
+    [structureEdit]="currentStructure"
     (emitStructure)="receiveStructure($event)"
   ></app-structure-form>
 
