--- a/sca-frontend/src/app/mod1-assets/mining-complex-schedule/mining-complex-schedule.component.scss
+++ b/sca-frontend/src/app/mod1-assets/mining-complex-schedule/mining-complex-schedule.component.scss
@@ -1,8 +1,11 @@
-h3 {
-  margin: 0 0 10px;
-}
+// .calendar {
+//   // height: calc(100vh - 70px - 40px - 46px);
+//   // height: 100vh;
+//   background-color: #ccc;
+// }
 
-pre {
-  background-color: #f5f5f5;
-  padding: 15px;
+@media (max-width: 537px) {
+  h2 {
+    font-size: 25px;
+  }
 }
