--- a/sca-frontend/src/styles.scss
+++ b/sca-frontend/src/styles.scss
@@ -102,12 +102,17 @@ a:focus {
   padding: 10px;
   font-size: 1.1em;
   display: block;
+  color: #fff;
 }
 
 #sidebar ul li a:hover {
   color: $sidebar-background-color;
   background: #fff;
 }
+
+// #sidebar ul li a:visited {
+//   color: #fff;
+// }
 
 #sidebar ul li.active > a,
 a[aria-expanded="true"] {
