--- a/sca-frontend/src/app/core/navbar/navbar.component.html
+++ b/sca-frontend/src/app/core/navbar/navbar.component.html
@@ -3,6 +3,9 @@
     <button type="button" id="sidebarCollapse" class="btn btn-info" (click)="openCloseEmmit()">
       <i class="fas fa-bars"></i>
     </button>
+    <button type="button" class="btn btn-info ml-1" [routerLink]="['/complexos-minerarios']">
+      <i class="fas fa-home"></i>
+    </button>
     <button
       class="btn btn-dark d-inline-block d-lg-none ml-auto"
       type="button"
